appId: com.anonymous.rnme
---

- launchApp
- tapOn: "Log in"

#validation message
- assertVisible: "Enter your email"
- assertVisible: "Enter your password"
