

appId: com.anonymous.rnme

---
# Login first
- runFlow: login.yaml

# Verify Browse screen
- assertVisible: "Browse"

# Search for a movie
- tapOn: "Search movies by title"
- inputText: "Batman"

# Wait for results
- extendedWaitUntil:
    visible: "Batman"

# Verify search result appears
- assertVisible: "Batman"

#offline message
- tapOn: "The Batman, 2022-03-01 · ★ 7.7, In his second year of fighting crime, Batman uncovers corruption in Gotham City that connects to his own family while facing a serial killer known as the Riddler., "

- tapOn: "Navigate up"

#clear search
- tapOn: ""

#switch tabs
- tapOn: ", Favorites"
#favorites listed movie displayed on offline
- assertVisible: "The Batman, 2022-03-01 · ★ 7.7"






# Take screenshot for evidence
- takeScreenshot: search-batman-results